--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Praktikum RPL</title>
 </head>
 <body>
-    <a> test </a>
+    <a> Praktikum RPL </a>
+    <div class="deskripsi">ini adalah Praktikum RPL</div>
 </body>
 </html>
